# ros_bridge_foo

foo/: CMakeLists.txt  package.xml
foo/src/: foo_listener.cpp  foo_talker.cpp
foo_msgs/: CMakeLists.txt  package.xml
foo_msgs/msg/: Foo.msg
