<?xml version="1.0"?>
<package format="2">
  <name>foo_msgs</name>
  <version>0.0.0</version>
  <description>The foo_msgs package</description>

  <maintainer email="jacob@todo.todo">jacob</maintainer>

  <license>TODO</license>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
